--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "errorify": "^0.3.1",
     "koa": "^1.1.2",
     "koa-route": "^2.4.2",
-    "koa-send": "^3.1.0",
+    "koa-send": "github:ashaffer/send",
     "minimist": "^1.2.0",
     "sha1": "^1.1.1",
     "watchify": "^3.7.0"
