--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "babel-register": "^6.4.3",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
-    "browserify-hmr": "^0.3.1",
-    "concat-stream": "^1.5.1",
+    "browserify-hmr": "github:ashaffer/browserify-hmr",
     "errorify": "^0.3.1",
     "koa": "^1.1.2",
     "koa-route": "^2.4.2",
