--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["es2015-without-regenerator"]
+  "presets": ["es2015-without-regenerator", "stage-2"],
+  "plugins": [["transform-react-jsx", {"pragma": "element"}]]
 }
