--- a/package.json
+++ b/package.json
@@ -14,22 +14,38 @@
     "postversion": "git push && git push --tags && npm publish --access=public"
   },
   "dependencies": {
+    "@f/map": "^1.5.3",
+    "@f/object-to-promise": "^1.1.3",
     "@f/pending-value": "^1.0.0",
+    "@f/promise-stream": "^1.1.3",
+    "babel-plugin-transform-react-jsx": "^6.6.5",
     "babel-preset-es2015-without-regenerator": "^1.0.1",
+    "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.4.3",
     "babelify": "^7.2.0",
+    "brfs": "^1.4.3",
     "browserify": "^13.0.0",
     "browserify-hmr": "github:ashaffer/browserify-hmr",
+    "co": "^4.6.0",
+    "envify": "^3.4.0",
     "errorify": "^0.3.1",
     "koa": "^1.1.2",
     "koa-route": "^2.4.2",
     "koa-send": "github:ashaffer/send",
     "minimist": "^1.2.0",
+    "mz": "^2.3.1",
     "sha1": "^1.1.1",
+    "source-map-support": "^0.4.0",
     "watchify": "^3.7.0"
   },
   "devDependencies": {
+    "@f/domready": "^1.0.2",
+    "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.1.2",
-    "tape": "^4.2.0"
+    "cheerio": "^0.20.0",
+    "rimraf": "^2.5.2",
+    "supertest": "^1.2.0",
+    "tape": "^4.2.0",
+    "vdux": "^2.4.5"
   }
 }
