--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "envify": "^3.4.0",
     "errorify": "^0.3.1",
     "koa": "^1.1.2",
+    "koa-error": "^1.1.3",
     "minimist": "^1.2.0",
     "mz": "^2.3.1",
     "sha1": "^1.1.1",
-    "source-map-stack": "^0.1.3",
+    "source-map-stack": "^0.1.7",
     "source-map-support": "^0.4.0",
     "watchify": "^3.7.0"
   },
