--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "postversion": "git push && git push --tags && npm publish --access=public"
   },
   "dependencies": {
+    "@f/elapsed-time": "^1.0.0",
     "@f/map": "^1.5.3",
     "@f/object-to-promise": "^1.1.3",
     "@f/pending-value": "^1.0.0",
     "@f/promise-stream": "^1.1.3",
     "@f/require-content": "^1.0.1",
+    "@f/switch": "^1.0.1",
     "babel-plugin-transform-react-jsx": "^6.6.5",
     "babel-preset-es2015-without-regenerator": "^1.0.1",
     "babel-preset-stage-2": "^6.5.0",
@@ -29,11 +31,13 @@
     "browserify-hmr": "github:ashaffer/browserify-hmr",
     "co": "^4.6.0",
     "envify": "^3.4.0",
+    "envitro": "^1.0.0",
     "errorify": "^0.3.1",
     "koa": "^1.1.2",
     "koa-error": "^1.1.3",
     "minimist": "^1.2.0",
     "mz": "^2.3.1",
+    "opt-stack": "^1.0.7",
     "sha1": "^1.1.1",
     "source-map-stack": "^0.1.7",
     "source-map-support": "^0.4.0",
