--- a/package.json
+++ b/package.json
@@ -27,20 +27,24 @@
     "babel-register": "^6.4.3",
     "babelify": "^7.2.0",
     "brfs": "^1.4.3",
-    "browserify": "^13.0.0",
+    "browserify": "github:ashaffer/node-browserify",
     "browserify-hmr": "github:ashaffer/browserify-hmr",
     "co": "^4.6.0",
     "envify": "^3.4.0",
     "envitro": "^1.0.0",
     "errorify": "^0.3.1",
+    "farmhash": "^1.1.1",
     "koa": "^1.1.2",
     "koa-error": "^1.1.3",
     "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "mz": "^2.3.1",
     "opt-stack": "^1.0.7",
-    "sha1": "^1.1.1",
+    "rimraf": "^2.5.2",
+    "rollupify": "^0.2.0",
     "source-map-stack": "^0.1.7",
     "source-map-support": "^0.4.0",
+    "uglifyify": "^3.0.1",
     "watchify": "^3.7.0"
   },
   "devDependencies": {
