--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,11 @@ install:
     - npm install -g babel-cli
     - npm install
 script: "make test"
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
