--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-register": "^6.4.3",
     "babelify": "^7.2.0",
     "brfs": "^1.4.3",
-    "browserify": "github:ashaffer/node-browserify",
+    "browserify": "^13.0.0",
     "browserify-hmr": "github:ashaffer/browserify-hmr",
     "cached-path-relative": "^1.0.0",
     "co": "^4.6.0",
