--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@f/debounce": "^1.0.0",
     "@f/is-promise": "^1.1.1",
+    "@f/is-undefined": "^1.1.1",
     "@f/log-error": "^1.0.0",
     "@f/map": "^1.5.3",
     "@f/object-to-promise": "^1.1.3",
@@ -48,6 +49,7 @@
     "rimraf": "^2.5.2",
     "rollupify": "^0.2.0",
     "source-map-stack": "^0.1.7",
+    "through2": "^2.0.1",
     "uglifyify": "^3.0.1",
     "watchify": "github:ashaffer/watchify"
   },
@@ -56,7 +58,6 @@
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.1.2",
     "cheerio": "^0.20.0",
-    "rimraf": "^2.5.2",
     "supertest": "^1.2.0",
     "tape": "^4.2.0",
     "vdux": "^2.4.5"
