--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.4.3",
     "babelify": "^7.2.0",
+    "br-cloud-fs": "^0.1.1",
     "brfs": "^1.4.3",
     "browserify": "^13.0.0",
     "browserify-hmr": "github:ashaffer/browserify-hmr",
@@ -40,9 +41,11 @@
     "farmhash": "^1.1.1",
     "koa": "^1.1.2",
     "koa-error": "^1.1.3",
+    "koa-static": "^2.0.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "mz": "^2.3.1",
+    "nodemon": "^1.9.2",
     "opt-stack": "^1.0.7",
     "rimraf": "^2.5.2",
     "rollupify": "^0.2.0",
