--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "envitro": "^1.0.2",
     "escape-regexp": "0.0.1",
     "farmhash": "^1.1.1",
+    "http-proxy": "^1.14.0",
     "koa": "^1.1.2",
     "koa-error": "^1.1.3",
     "koa-static": "^2.0.0",
@@ -52,6 +53,7 @@
     "source-map-stack": "^0.1.7",
     "through2": "^2.0.1",
     "uglifyify": "^3.0.1",
+    "wait-for-port": "0.0.2",
     "watchify": "github:ashaffer/watchify"
   },
   "devDependencies": {
