--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.2.33",
   "license": "MIT",
   "main": "lib/index.js",
+  "cloudFS": "test/assets",
   "bin": {
     "unv": "bin/cli.js"
   },
@@ -18,30 +19,28 @@
     "@f/log-error": "^1.0.0",
     "@f/map": "^1.5.3",
     "@f/object-to-promise": "^1.1.3",
-    "@f/pending-value": "^1.0.0",
     "@f/promise-stream": "^1.1.3",
     "@f/require-content": "^1.0.1",
     "@f/switch": "^1.0.1",
     "@f/thunk-to-promise": "^1.1.1",
-    "@f/to-promise": "^1.1.2",
     "babel-plugin-transform-react-jsx": "^6.6.5",
     "babel-preset-es2015-without-regenerator": "^1.0.1",
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.4.3",
     "babelify": "^7.2.0",
     "br-cloud-fs": "^0.1.1",
-    "brfs": "^1.4.3",
     "browserify": "^13.0.0",
     "browserify-hmr": "github:ashaffer/browserify-hmr",
     "cached-path-relative": "^1.0.0",
-    "co": "^4.6.0",
+    "cloud-fs": "^0.1.3",
     "envify": "^3.4.0",
-    "envitro": "^1.0.2",
-    "escape-regexp": "0.0.1",
+    "envitro": "^1.0.3",
     "farmhash": "^1.1.1",
     "http-proxy": "^1.14.0",
     "koa": "^1.1.2",
+    "koa-compose": "^2.4.0",
     "koa-error": "^1.1.3",
+    "koa-mount": "^1.3.0",
     "koa-static": "^2.0.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
@@ -49,9 +48,6 @@
     "nodemon": "^1.9.2",
     "opt-stack": "^1.0.7",
     "rimraf": "^2.5.2",
-    "rollupify": "^0.2.0",
-    "source-map-stack": "^0.1.7",
-    "through2": "^2.0.1",
     "uglifyify": "^3.0.1",
     "wait-for-port": "0.0.2",
     "watchify": "github:ashaffer/watchify"
@@ -60,7 +56,9 @@
     "@f/domready": "^1.0.2",
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.1.2",
+    "brfs": "^1.4.3",
     "cheerio": "^0.20.0",
+    "decache": "^4.0.0",
     "supertest": "^1.2.0",
     "tape": "^4.2.0",
     "vdux": "^2.4.5"
