--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@f/promise-stream": "^1.1.3",
     "@f/switch": "^1.0.1",
     "@f/thunk-to-promise": "^1.1.1",
+    "@joshrtay/decache": "^4.0.1",
     "babel-plugin-transform-react-jsx": "^6.6.5",
     "babel-preset-es2015-without-regenerator": "^1.0.1",
     "babel-preset-stage-2": "^6.5.0",
@@ -48,7 +49,6 @@
     "babel-preset-es2015": "^6.1.2",
     "cheerio": "^0.20.0",
     "cloud-fs": "^0.1.4",
-    "decache": "^4.0.0",
     "supertest": "^1.2.0",
     "tape": "^4.2.0",
     "vdux": "^2.4.5"
