--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "farmhash": "^1.1.1",
     "koa": "^1.1.2",
     "koa-compose": "^2.4.0",
+    "koa-compress": "^1.0.9",
     "koa-error": "^1.1.3",
     "koa-mount": "^1.3.0",
     "koa-static": "^2.0.0",
