--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "babel-preset-es2015-without-regenerator": "^1.0.1",
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.4.3",
-    "babelify": "^7.2.0",
+    "babelify": "7.2.0",
     "br-cloud-fs": "^0.1.1",
-    "browserify": "^13.0.0",
+    "browserify": "13.0.0",
     "browserify-hmr": "github:ashaffer/browserify-hmr",
-    "bundle-collapser": "^1.2.1",
+    "bundle-collapser": "1.2.1",
     "cached-path-relative": "^1.0.0",
     "envify": "^3.4.0",
     "envitro": "^1.0.3",
