--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@f/switch": "^1.0.1",
     "@f/thunk-to-promise": "^1.1.1",
     "@joshrtay/decache": "^4.0.1",
-    "babel-plugin-transform-react-jsx": "^6.6.5",
-    "babel-preset-es2015-without-regenerator": "^1.0.1",
-    "babel-preset-stage-2": "^6.5.0",
-    "babel-register": "^6.4.3",
+    "babel-plugin-transform-react-jsx": "6.6.5",
+    "babel-preset-es2015-without-regenerator": "1.0.1",
+    "babel-preset-stage-2": "6.5.0",
+    "babel-register": "6.4.3",
     "babelify": "7.2.0",
     "br-cloud-fs": "^0.1.1",
     "browserify": "13.0.0",
